# flux-schnell-on-akash

./: Dockerfile  README.md  app.py  deploy.yaml  pyproject.toml  settings.yaml
